--- a/src/index.html
+++ b/src/index.html
@@ -489,15 +489,14 @@ Prof. Arvind Satyanarayan
    ><img src="nature-think.jpg" class="projpic"
    >How does ChatGPT think?</a> <strong>Nature</strong> news feature by
    Matthew Hutson, May 14, 2024. 
-   Researchers are striving to reverse-engineer artificial intelligence
+   "Researchers are striving to reverse-engineer artificial intelligence
    and scan the 'brains' of LLMs to see what they are doing, how and why...
-   Explainable AI tools are being devised to explain the workings of LLMs.
    Researchers want explanations so that they can create safer, more
    efficient and more accurate AI. Users want explanations so that they
    know when to trust a chatbot's output. And regulators want explanations
-   so that they know what AI guard rails to put in place.
+   so that they know what AI guard rails to put in place....
    <span class="more"></span>
-   <span class="extra">...Bau and his colleagues have also developed methods
+   <span class="extra">Bau and his colleagues have also developed methods
      to scan and edit AI neural networks, including a technique they call
      <a href="https://rome.baulab.info">causal tracing</a>.
      The idea is to give a model a prompt such as "Michael Jordan
@@ -508,7 +507,7 @@ Prof. Arvind Satyanarayan
      the model says "basketball" in reply to the second prompt, to see
      which areas of the neural network are crucial for that response.
      In other words, the researchers want to identify the parts of the AI's
-     'brain' that make it answer in a given way....
+     'brain' that make it answer in a given way...."
    </span>
 </p>
 
@@ -525,8 +524,8 @@ Prof. Arvind Satyanarayan
    very quickly but that are not yet well-understood&mdash;and they
    are both difficult and expensive to study. <a href="https://ndif.us/">NDIF</a>
    is a major investment in scientific infrastructure to help meet
-   the challenge, with the National Science Foundation making a $9m
-   investment in large-scale software AI infrastructure that is aimed
+   the challenge, with $9m of funding from the National Science Foundation
+   to develop large-scale AI inference software aimed
    at enabling cutting-edge research.  Questions in the public interest,
    like "how can we explain an AI decision?"
    or "what can improve the safety and robustness of AI?"
@@ -537,17 +536,19 @@ Prof. Arvind Satyanarayan
    field touched by AI, to expand, accelerate, and democratize impactful
    AI science. Programmers interested in the technical details can
    <a href="https://pypi.org/project/nnsight/">pip install nnsight</a>
-   to try NDIF today. <a href="https://nnsight.net/status">nnsight.net/status</a>
-   lists models that you can use and hack on remotely including llama3-70b.
-   You can access and alter activations, gradients, and customize any step,
-   like having a 70b model on your own laptop. Very different from commercial
-   AI inference services. NSF funding will expand NDIF to support every
+   to try NDIF today.  You can remotely access and alter activations,
+   gradients, and customize any step of
+   <a href="https://nnsight.net/status">large models like llama3-70b</a>
+   like having a 70b model on your own laptop, a level of transparency
+   that goes far behyond commercial AI inference services.
+   NSF funding will expand NDIF to support every
    open model, and a broad range of research methods.
-   NDIF is hiring. Read more on
+   Read more about the positions NDIF is hiring to fill on 
    <a href="https://www.linkedin.com/feed/update/urn:li:activity:7197729186701004800/">LinkedIn</a>,
    <a href="https://x.com/davidbau/status/1787597395741835564">Twitter/X</a>, and
-   on the <a href="https://ndif.us/">NDIF website</a>.
+   on the
    </span>
+   <a href="https://ndif.us/">NDIF website</a>.
 </p>
 </div>
 </div>
