--- a/src/index.html
+++ b/src/index.html
@@ -546,9 +546,9 @@ Prof. Arvind Satyanarayan
    The goal of NDIF is to provide a robust and transparent AI inference
    service to enable scientists in every part of the country in every
    field touched by AI, to expand, accelerate, and democratize impactful
-   AI science. Programmers interested in the technical details can
+   AI science. (Programmers interested in the technical details can
    <a href="https://pypi.org/project/nnsight/">pip install nnsight</a>
-   to try NDIF today.  Users can remotely access and alter activations,
+   to try NDIF today.)  Users can remotely access and alter activations,
    gradients, and customize any step of
    <a href="https://nnsight.net/status">large models like llama3-70b</a>
    like having a 70b model on your own laptop. This transparency
