--- a/src/publications.html
+++ b/src/publications.html
@@ -162,8 +162,37 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
+  Arnab Sen Sharma, David Atkinson, <strong>David Bau</strong>.
+  <a href="https://romba.baulab.info/"
+    >Locating and Editing Factual Associations in Mamba.</a>
+  <em>Proceedings of the 2024 Conference on Langauge Modeling.</em>
+  <nobr>(COLM 2024)</nobr>
+</div>
+
+<div class="main pub">
+  Kenneth Li, Tianle Liu, Naomi Bashkansky, <strong>David Bau</strong>,
+  Fernanda Vi&eacute;gas, Hanspeter Pfister, Martin Wattenberg.
+  <a href="https://arxiv.org/abs/2402.10962"
+     >Measuring and Controlling Instruction Instability in Language Model Dialogs.</a>
+  <em>Proceedings of the 2024 Conference on Langauge Modeling.</em>
+  <nobr>(COLM 2024)</nobr>
+</div>
+
+<div class="main pub">
+  Stephen Casper, Carson Ezell, Charlotte Siegmann, Noarm Kolt, Taylor Lynn Curtis,
+  Benjamin Bucknall,Andreas Haupt, Kevin Wei, Jeremy Scheurer, Marius Hobbhahn,
+  Lee Sharkey, Satyapriya Krishna, Marvin Von Hagen, Silas Alberti, Alan Chan,
+  Qinyi Sun, Michael Gerovitch, <strong>David Bau</strong>, Max Tegmark,
+  David Krueger, Dylan Hadfield-Menell.
+  <a href="https://arxiv.org/abs/2401.14446"
+    >Black-box Access is Insufficient for Rigorous AI Audits.</a>
+  <em>Proceedings of the 2024 ACM Conference on Fairness, Accountability, and Transparency</em>
+  <nobr>(FAccT 2024)</nobr>
+</div>
+
+<div class="main pub">
   Evan Hernandez, Arnab Sen Sharma, Tal Haklay, Kevin Meng,
-  Martin Wattenberg, Jacob Andreas, Yonatan Belinkov <strong>David Bau</strong>.
+  Martin Wattenberg, Jacob Andreas, Yonatan Belinkov, <strong>David Bau</strong>.
   <a href="https://lre.baulab.info/"
     >Linearity of Relation Decoding in Transformer Language Models.</a>
   <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
