--- a/src/cv.html
+++ b/src/cv.html
@@ -94,6 +94,10 @@ Interpretable Machine Learning, Natural Language Processing, Computer Vision.
 <h2 class="main">Research Projects</h2>
 
 <div class="main item">
+<strong>National Deep Inference Fabric, <a href="https://ndif.us/">ndif.us</a>.</strong> A nationwide research infrastructure for large-scale AI model inference. Studying huge AI has become prohibitive due to the size of the models and the lack of systems to share running models between researchers. NDIF is an NSF-funded project to lower costs and unlock the next generation of large-scale AI research by creating the necessary shared infrastructure.
+</div>
+
+<div class="main item">
 <strong>Model Editing, <a href="https://rome.baulab.info/">rome.baulab.info</a>.</strong> A research program to understand the mechanisms of large models well enough that a user can directly change the parameters of a deep model according to their own intentions, rather than using a data set for retraining.  For example, using closed-form upates we are able to locate and edit factual knowledge within a large language model.
 </div>
 
@@ -157,6 +161,11 @@ A.B. in Mathematics
 <strong>Assistant Professor.</strong> Northeastern University Khoury College of Computer Sciences.
 </div>
 
+<div class="index">2024-current</div>
+<div class="main item">
+<strong>National Deep Inference Fabric.</strong> <a href="https://ndif.us/">ndif.us</a>. Principal Investigator and Director.
+</div>
+
 <div class="index">2021-2022</div>
 <div class="main item">
 <strong>Postdoctoral Fellow.</strong> Martin Wattenberg lab, Harvard University.
@@ -189,13 +198,12 @@ A.B. in Mathematics
 Staff software engineer.
 <ul>
 <li><em>Image Search Freshness.</em>
-Led a team of engineers to improve freshness of Google Image Search: 
-added the ability to satisfy queries for new events and new concepts with
-new and newsworthy results within minutes of their publication on the web.
+Led a team of engineers to improve freshness of Google Image Search,
+ranking new and newsworthy results within minutes of their publication on the web.
 <li><em>Image Search Visual Redesign.</em>
-Led a team to prototype and implement a major image search redesign,
-providing a long scrolling page of results. Solved infrastructure
-challenges posed by serving results so quickly at Google's enormous scale.
+Led a team to redesign image search with a continous page of results, and
+solved infrastructure posed the increased data volumes at Google's
+enormous scale.
 <li><em>Facets for Images.</em>
 Led a team of engineers and designers to implement an image
 clustering feature at the top of Google Image search.
@@ -262,6 +270,8 @@ innovative programming tool project.
 
 <h2 class="main">Awards</h2>
 
+<div class="main">Ruth and Joel Spira Award for Excellence in Teaching, 2024</div>
+
 <div class="main">MIT EECS Great Educators Fellowship, 2015</div>
 
 <div class="main">NSF Graduate Research Fellowship, 1992</div>
@@ -293,8 +303,37 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+  Arnab Sen Sharma, David Atkinson, <strong>David Bau</strong>.
+  <a href="https://romba.baulab.info/"
+    >Locating and Editing Factual Associations in Mamba.</a>
+  <em>Proceedings of the 2024 Conference on Langauge Modeling.</em>
+  <nobr>(COLM 2024)</nobr>
+</div>
+
+<div class="main pub">
+  Kenneth Li, Tianle Liu, Naomi Bashkansky, <strong>David Bau</strong>,
+  Fernanda Vi&eacute;gas, Hanspeter Pfister, Martin Wattenberg.
+  <a href="https://arxiv.org/abs/2402.10962"
+     >Measuring and Controlling Instruction Instability in Language Model Dialogs.</a>
+  <em>Proceedings of the 2024 Conference on Langauge Modeling.</em>
+  <nobr>(COLM 2024)</nobr>
+</div>
+
+<div class="main pub">
+  Stephen Casper, Carson Ezell, Charlotte Siegmann, Noarm Kolt, Taylor Lynn Curtis,
+  Benjamin Bucknall,Andreas Haupt, Kevin Wei, Jeremy Scheurer, Marius Hobbhahn,
+  Lee Sharkey, Satyapriya Krishna, Marvin Von Hagen, Silas Alberti, Alan Chan,
+  Qinyi Sun, Michael Gerovitch, <strong>David Bau</strong>, Max Tegmark,
+  David Krueger, Dylan Hadfield-Menell.
+  <a href="https://arxiv.org/abs/2401.14446"
+    >Black-box Access is Insufficient for Rigorous AI Audits.</a>
+  <em>Proceedings of the 2024 ACM Conference on Fairness, Accountability, and Transparency</em>
+  <nobr>(FAccT 2024)</nobr>
+</div>
+
+<div class="main pub">
   Evan Hernandez, Arnab Sen Sharma, Tal Haklay, Kevin Meng,
-  Martin Wattenberg, Jacob Andreas, Yonatan Belinkov <strong>David Bau</strong>.
+  Martin Wattenberg, Jacob Andreas, Yonatan Belinkov, <strong>David Bau</strong>.
   <a href="https://lre.baulab.info/"
     >Linearity of Relation Decoding in Transformer Language Models.</a>
   <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
@@ -523,7 +562,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 <div class="main pub"><em>Breaking Open the Black Box of AI.</em> <a href="https://northeastern.instructure.com/courses/184974/pages/ai-in-action-applied-ai-innovation-across-industries-breaking-the-ml-black-box">AI in Action</a>, Northeastern University, Boston, MA. April 2024.</div>
 <div class="main pub"><em>A pragmatic approach to open standards for AI.</em> AI Safety Institute, Department for Science, Innovation and Technology, London, UK. March 2024.</div>
 <div class="main pub"><em>Flying Blind: making models we do not understand and what to do instead.</em> Invited Talk at the Harvard AI Safety Offstite. Essex, MA. March 2024.</div>
-<div class="main pub"><em>Direct Model Editing and Large Model Interpretability.</em> Invited Talk at UC Berkeley CS 294-267, Understanding Large Language Models. Berkeley, CA. November 2023.</div>
+<div class="main pub"><a href="https://www.youtube.com/watch?v=8QPVKpzyZdY&t=5s"><em>Direct Model Editing and Large Model Interpretability.</em></a> Invited Talk at UC Berkeley CS 294-267, Understanding Large Language Models. Berkeley, CA. November 2023.</div>
 <div class="main pub"><em>A Pivotal Moment in Machine Learning.</em> Invited Talk at the Harvard AI Safety Offstite. Essex, MA. November 2023.</div>
 <div class="main pub"><em>Causal Explanations, Direct Model Editing, and Real-World Impact.</em> Invited Talk at the Toyota Technology Institute at Chicago. Chicago, IL. October 2023.</div>
 <div class="main pub"><em>Three Ideas on Interpretbability of Big ML Models.</em> Invited Talk at the Machine Learning Department Seminar, Carnegie Mellon University. Pittsburgh, PA. October 2023.</div>
