--- a/src/cv.html
+++ b/src/cv.html
@@ -558,6 +558,8 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>The Fundamental Duality of Interpretability in ML.</em> <a href="https://icml2024mi.pages.dev/">Mechanistic Interpretability Workshop at ICML 2024</a>. Vienna, Austria. July 2024.</div>
+<div class="main pub"><em>Resilience and Interpretability.</em> <a href="https://www.alignment-workshop.com/vienna-2024">FAR.AI Alignment Workshop</a>. Vienna, Austria. July 2024.</div>
 <div class="main pub"><em>Unlearning.</em> <a href="https://dc-workshop.genlaw.org/">GenLaw DC Workshop</a>. Washington, DC. April 2024.</div>
 <div class="main pub"><em>Breaking Open the Black Box of AI.</em> <a href="https://northeastern.instructure.com/courses/184974/pages/ai-in-action-applied-ai-innovation-across-industries-breaking-the-ml-black-box">AI in Action</a>, Northeastern University, Boston, MA. April 2024.</div>
 <div class="main pub"><em>A pragmatic approach to open standards for AI.</em> AI Safety Institute, Department for Science, Innovation and Technology, London, UK. March 2024.</div>
