Add Alex, a couple more talks.

--- a/src/cv.html
+++ b/src/cv.html
@@ -560,6 +560,8 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <div class="main pub"><em>The Fundamental Duality of Interpretability in ML.</em> <a href="https://icml2024mi.pages.dev/">Mechanistic Interpretability Workshop at ICML 2024</a>. Vienna, Austria. July 2024.</div>
 <div class="main pub"><em>Resilience and Interpretability.</em> <a href="https://www.alignment-workshop.com/vienna-2024">FAR.AI Alignment Workshop</a>. Vienna, Austria. July 2024.</div>
+<div class="main pub"><em>Locating and Editing Functionality in Deep Networks.</em> <a href="https://humancompatible.ai/chai2024/">8th Annual Center for Human-Compatible AI Workshop</a>. Asilomar, CA. June 2024.</div>
+<div class="main pub"><em>Functions, Facts, and a Fabric.</em> <a href="https://nlp.stanford.edu/seminar/details/davidbau_2024.shtml">Stanford NLP Seminar Series</a>. Palo Alto, CA. June 2024.</div>
 <div class="main pub"><em>Unlearning.</em> <a href="https://dc-workshop.genlaw.org/">GenLaw DC Workshop</a>. Washington, DC. April 2024.</div>
 <div class="main pub"><em>Breaking Open the Black Box of AI.</em> <a href="https://northeastern.instructure.com/courses/184974/pages/ai-in-action-applied-ai-innovation-across-industries-breaking-the-ml-black-box">AI in Action</a>, Northeastern University, Boston, MA. April 2024.</div>
 <div class="main pub"><em>A pragmatic approach to open standards for AI.</em> AI Safety Institute, Department for Science, Innovation and Technology, London, UK. March 2024.</div>
@@ -613,10 +615,10 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Organized Workshops</h2>
 
-<div class="main pub">3rd Workshop on Human-AI Co-Creation with Generative Models.</br>Virtual, from Helskinki Finland, March 2022.</div>
-<div class="main pub">3rd Workshop on Human-AI Co-Creation with Generative Models.</br>Virtual, from Helskinki Finland, March 2022.</div>
+<div class="main pub">New England Mechanistic Interpretability Workshop.</br>Boston, MA. August 2024.</div>
+<div class="main pub">3rd Workshop on Human-AI Co-Creation with Generative Models.</br>Virtual, from Helskinki Finland. March 2022.</div>
 <div class="main pub">Structure and Intpretation of Deep Networks, Workshop organizer.<br>Cambridge, MA.  January 2020.</div>
-<div class="main pub">Explainable AI for Vision Workshop, Workshop organizer.<br>Seoul Korea, November 2019.</div>
+<div class="main pub">Explainable AI for Vision Workshop, Workshop organizer.<br>Seoul Korea. November 2019.</div>
 <div class="main pub">GANocracy Workshop on the Theory, Practice, and Artistry of Deep Generative Modeling, Workshop organizer.<br>Cambridge, MA. May 2019.</div>
 <div class="main pub">Robust and Interpretable Deep Learning Symposium, Workshop organizer.<br>Cambridge, MA. November 2018.</div>
 <div class="main pub">Blocks and Beyond, Workshop organizer.<br>Memphis, TN. July 2017.</div>
