--- a/src/index.html
+++ b/src/index.html
@@ -333,10 +333,16 @@ Jaden Fiotto-Kaufman
 Aaron Mueller
 </a>
 </a>
+<a href="https://alex-loftus.com/">
+<img src="people/loftus.jpg">
+Alex Loftus
+</a>
+<!--
 <a href="https://www.lesswrong.com/users/sam-marks">
 <img src="people/sam.jpg">
 Sam Marks
 </a>
+-->
 <!--
 <a href="https://mengk.me/">
 <img src="people/kevin.jpg">
