--- a/src/cv.html
+++ b/src/cv.html
@@ -558,6 +558,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Closing Keynote: A Third Copernican Revolution.</em> <a href="https://nemiconf.github.io/summer24/">New England Mechanistic Interpretability Workshop (NEMI 2024)</a>. Boston, MA. August 2024.</div>
 <div class="main pub"><em>The Fundamental Duality of Interpretability in ML.</em> <a href="https://icml2024mi.pages.dev/">Mechanistic Interpretability Workshop at ICML 2024</a>. Vienna, Austria. July 2024.</div>
 <div class="main pub"><em>Resilience and Interpretability.</em> <a href="https://www.alignment-workshop.com/vienna-2024">FAR.AI Alignment Workshop</a>. Vienna, Austria. July 2024.</div>
 <div class="main pub"><em>Locating and Editing Functionality in Deep Networks.</em> <a href="https://humancompatible.ai/chai2024/">8th Annual Center for Human-Compatible AI Workshop</a>. Asilomar, CA. June 2024.</div>
