--- a/src/cv.html
+++ b/src/cv.html
@@ -164,6 +164,8 @@ A.B. in Mathematics
 <div class="index">2024-current</div>
 <div class="main item">
 <strong>National Deep Inference Fabric.</strong> <a href="https://ndif.us/">ndif.us</a>. Principal Investigator and Director.
+<ul><li>Created the project and team for a $9M NSF-funded research infrastructure project, consisting of a new programming idiom and a new inference service to enable research into the internals of very large-scale AI models such as trillion-parameter-class LLMs.
+</ul>
 </div>
 
 <div class="index">2021-2022</div>
@@ -181,13 +183,10 @@ A.B. in Mathematics
 <strong>Pencil Code.</strong>
 <a href="https://pencilcode.net/">pencilcode.net</a>. Director.
 <ul>
-<li><em>Pencil Code service.</em> Working Google CS First and open-source contributors,
-  created the team and partnerships that researched, developed, and deployed
-  a novel educational programming system and curriculum for beginners,
-  used by more than 200,000 students.
-<li><em>Pencil Code block code editor.</em> Led open-source community efforts to create
-  block-based programming technology that uniquely bridges block- and text-code learning,
-  used by Code.org and CS First to reach tens of millions of students.
+<li>Created the team and partnerships that researched, developed, and deployed,
+  and taught a novel educational programming system that uniqeuly
+  bridges block- and text-code learning, used on pencilcode.net by
+  200,000 students and via Code.org and CS First by tens of millions.
 </ul>
 </div>
 
@@ -202,8 +201,7 @@ Led a team of engineers to improve freshness of Google Image Search,
 ranking new and newsworthy results within minutes of their publication on the web.
 <li><em>Image Search Visual Redesign.</em>
 Led a team to redesign image search with a continous page of results, and
-solved infrastructure posed the increased data volumes at Google's
-enormous scale.
+solved infrastructure for increased data volumes at Google's enormous scale.
 <li><em>Facets for Images.</em>
 Led a team of engineers and designers to implement an image
 clustering feature at the top of Google Image search.
@@ -508,6 +506,32 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 
 <h2 class="main">Preprints</h2>
 
+<div class="main pub">Jaden Fiotto-Kaufman, Alexander R Loftus, Eric Todd, Jannik Brinkmann, Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki, Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha, Jonathan Bell, Byron Wallace, <strong>David Bau</strong>.
+  <a href="https://arxiv.org/abs/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals</a>.
+  arxiv.org/abs/2407.14561 (2024)</div>
+
+<div class="main pub">Sheridan Feucht, David Atkinson, Byron Wallace, <strong>David Bau</strong>.
+<a href="https://footprints.baulab.info/"
+   >Token Erasure as a Footprint of Implicit Vocabulary Items in LLMs</a>.
+  arxiv.org/abs/2406.20086 (2024)</div>
+
+<div class="main pub">Samuel Marks, Can Rager, Eric J Michaud, Yonatan Belinkov, <strong>David Bau</strong>, Aaron Mueller.
+  <a href="https://features.baulab.info/">Sparse feature circuits: Discovering and editing interpretable causal graphs in language models</a>.
+  arxiv.org/abs/2403.19647 (2024)</div>
+
+<div class="main pub">Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, Eric Todd, <strong>David Bau</strong>, Yonatan Belinkov.
+  <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: A History, Survey, and Theoretical Grounding of Causal Interpretability</a>.
+  arxiv.org/abs/2408.01416 (2024)</div>
+
+<div class="main pub">Adam Karvonen, Benjamin Wright, Can Rager, Rico Angell, Jannik Brinkmann, Logan Smith, Claudio Mayrink Verdun, <strong>David Bau</strong>, Samuel Marks.
+  <a href="https://arxiv.org/abs/2408.00113">Measuring progress in dictionary learning for language model interpretability with board game models</a>.
+  arxiv.org/abs/2408.00113 (2024)</div>
+
+<div class="main pub">Koyena Pal, <strong>David Bau</strong>, Ren&eacute;e J Miller.
+<a href="https://arxiv.org/abs/2403.02327"
+   >Model Lakes</a>.
+  arxiv.org/abs/2403.02327 (2024)</div>
+
 <div class="main pub">Alex Andonian, Sabrina Osmany, Audrey Cui, Yeon-Hwan Park, Ali Jahanian, Antonio Torralba, <strong>David Bau</strong>.  <a href="https://arxiv.org/abs/2103.10951">Paint by Word</a>.  arxiv.org/abs/2103.10951 (2021)</div>
 
 <h2 class="main">Selected Patents</h2>
@@ -616,16 +640,13 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Organized Workshops</h2>
 
-<div class="main pub">New England Mechanistic Interpretability Workshop.</br>Boston, MA. August 2024.</div>
-<div class="main pub">3rd Workshop on Human-AI Co-Creation with Generative Models.</br>Virtual, from Helskinki Finland. March 2022.</div>
-<div class="main pub">Structure and Intpretation of Deep Networks, Workshop organizer.<br>Cambridge, MA.  January 2020.</div>
-<div class="main pub">Explainable AI for Vision Workshop, Workshop organizer.<br>Seoul Korea. November 2019.</div>
-<div class="main pub">GANocracy Workshop on the Theory, Practice, and Artistry of Deep Generative Modeling, Workshop organizer.<br>Cambridge, MA. May 2019.</div>
-<div class="main pub">Robust and Interpretable Deep Learning Symposium, Workshop organizer.<br>Cambridge, MA. November 2018.</div>
-<div class="main pub">Blocks and Beyond, Workshop organizer.<br>Memphis, TN. July 2017.</div>
-
-<div class="main pub">Coding Projects for Humanities Classes, Workshop organizer.<br>Cambridge, MA. May 2014.</div>
-<div class="main pub">Pencil Code CS Teaching Hackathon, Workshop organizer.<br>Cambridge, MA. March 2014.</div>
+<div class="main pub"><a href="https://nemiconf.github.io/summer24/">New England Mechanistic Interpretability Workshop.</a></br>Boston, MA. August 2024.</div>
+<div class="main pub"><a href="https://hai-gen.github.io/2022/">3rd Workshop on Human-AI Co-Creation with Generative Models.</a></br>Virtual, from Helskinki Finland. March 2022.</div>
+<div class="main pub"><a href="https://sidn.csail.mit.edu/">Structure and Intpretation of Deep Networks, Workshop organizer.</a><br>Cambridge, MA.  January 2020.</div>
+<div class="main pub"><a href="https://xai.kaist.ac.kr/workshop/2019/">Explainable AI for Vision Workshop, Workshop organizer.</a><br>Seoul Korea. November 2019.</div>
+<div class="main pub"><a href="http://ganocracy.csail.mit.edu/">GANocracy Workshop on the Theory, Practice, and Artistry of Deep Generative Modeling, Workshop organizer.</a><br>Cambridge, MA. May 2019.</div>
+<div class="main pub"><a href="https://ridl.csail.mit.edu/">Robust and Interpretable Deep Learning Symposium, Workshop organizer.</a><br>Cambridge, MA. November 2018.</div>
+<div class="main pub"><a href="https://cs.wellesley.edu/~blocks-and-beyond/1/">Blocks and Beyond, Workshop organizer.</a><br>Memphis, TN. July 2017.</div>
 <div class="main pub">Teaching with Pencil Code, Workshop organizer.<br>Cambridge, MA.  February 2014.</div>
 
 
