--- a/public/cv.html
+++ b/public/cv.html
@@ -354,6 +354,10 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 </div>
 
 <div class="main pub">
+  Rohit Gandikota, Joanna Materzy ´nska, Tingrui Zhou, Antonio Torralba, <strong>David Bau</strong>. <a href="https://sliders.baulab.info/">Concept Sliders: Lra adaptors for precise control in diffusion models.</a> <em>Proceedings of the European Conference on Computer Vision</em> <nobr>(ECCV 2024)</nobr>
+</div>
+
+<div class="main pub">
   Rohit Gandikota, Hadas Orgad, Yonatan Belinkov, Joanna Materzy&nacute;ska, <strong>David Bau</strong>. <a href="https://unified.baulab.info/">Unified Concept Editing in Diffusion Models.</a> <em>Proceedings of the 2024 IEEE/CVF Winter Conference on Applications of Computer Vision.</em> <nobr>(WACV 2024)</nobr>
 </div>
 
