--- a/public/cv.html
+++ b/public/cv.html
@@ -588,7 +588,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <div class="main pub"><em>Closing Keynote: A Third Copernican Revolution.</em> <a href="https://nemiconf.github.io/summer24/">New England Mechanistic Interpretability Workshop (NEMI 2024)</a>. Boston, MA. August 2024.</div>
 <div class="main pub"><em>The Fundamental Duality of Interpretability in ML.</em> <a href="https://icml2024mi.pages.dev/">Mechanistic Interpretability Workshop at ICML 2024</a>. Vienna, Austria. July 2024.</div>
-<div class="main pub"><em>Resilience and Interpretability.</em> <a href="https://www.alignment-workshop.com/vienna-2024">FAR.AI Alignment Workshop</a>. Vienna, Austria. July 2024.</div>
+<div class="main pub"><em><a href="https://www.youtube.com/watch?v=AIfmSx250kM">Resilience and Interpretability</a>.</em> <a href="https://www.alignment-workshop.com/vienna-2024">FAR.AI Alignment Workshop</a>. Vienna, Austria. July 2024.</div>
 <div class="main pub"><em>Locating and Editing Functionality in Deep Networks.</em> <a href="https://humancompatible.ai/chai2024/">8th Annual Center for Human-Compatible AI Workshop</a>. Asilomar, CA. June 2024.</div>
 <div class="main pub"><em>Functions, Facts, and a Fabric.</em> <a href="https://nlp.stanford.edu/seminar/details/davidbau_2024.shtml">Stanford NLP Seminar Series</a>. Palo Alto, CA. June 2024.</div>
 <div class="main pub"><em>Unlearning.</em> <a href="https://dc-workshop.genlaw.org/">GenLaw DC Workshop</a>. Washington, DC. April 2024.</div>
