--- a/public/index.html
+++ b/public/index.html
@@ -583,12 +583,16 @@ Prof. Arvind Satyanarayan
 <input class="collapse" type="checkbox">
 <p>
 <img src="sliders.png" class="projpic">
-<a href="http://sliders.baulab.info/">Concept Sliders</a>
- GANs are famous for containing disenangled latents that can control a variety
- of interpretable image attributes, so we want to know: are similar controllable latents
- present in diffusion models?  In this work, we develop Concept Sliders, a way of finding
+<a href="http://sliders.baulab.info/">Concept Sliders.</a>
+ While GANs are famous for containing disenangled latents that can control a variety
+ of interpretable image attributes, it has not been known whether similar controllable
+ latents are present in diffusion models.
+ In this work, we develop Concept Sliders, a way of finding
  LoRA adjustments to diffusion model weights that cleanly and smoothly
- control a single disentangled concept.
+ control a single disentangled concept.  With Concept Sliders, an
+ artist can easily modulate a single attribute like "age" or
+ "smiling" or even "cooked food" to smoothly adjust the visual attributes
+ of an image.
 <span class="more"></span>
 <span class="extra">
  Concept sliders are based on the guided-training technique underling
