--- a/public/index.html
+++ b/public/index.html
@@ -591,8 +591,8 @@ Prof. Arvind Satyanarayan
  LoRA adjustments to diffusion model weights that cleanly and smoothly
  control a single disentangled concept.  With Concept Sliders, an
  artist can easily modulate a single attribute like "age" or
- "smiling" or even "cooked food" to smoothly adjust the visual attributes
- of an image.
+ "smiling" or even "cooked food" to smoothly adjust the visual
+ characteristics of an image.
 <span class="more"></span>
 <span class="extra">
  Concept sliders are based on the guided-training technique underling
@@ -604,8 +604,9 @@ Prof. Arvind Satyanarayan
  an open-source hit among the artistic community, and they also provide
  a promising window into the organization of visual concept information
  within the parameter space of diffusion models.  The paper develops
- and evaluates over 50 different concept sliders, and examines their
- efficacy, distortion, and composition.
+ and evaluates over 50 different concept sliders including very interesting
+ sliders that reduce visible distortions in diffusion model output, and
+ examines their efficacy, specificity, and composition.
 </span>
 <a href="https://arxiv.org/abs/2308.09124"
    >R Gandikota, J Materzy&nacute;ska, T Zhou, A Torralba,
