--- a/public/index.html
+++ b/public/index.html
@@ -606,7 +606,7 @@ Prof. Arvind Satyanarayan
  within the parameter space of diffusion models.  The paper develops
  and evaluates over 50 different concept sliders including very interesting
  sliders that reduce visible distortions in diffusion model output, and
- examines their efficacy, specificity, and composition.
+ examines their efficacy, specificity, and composability.
 </span>
 <a href="https://arxiv.org/abs/2308.09124"
    >R Gandikota, J Materzy&nacute;ska, T Zhou, A Torralba,
