--- a/public/cv.html
+++ b/public/cv.html
@@ -301,6 +301,14 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+  Sheridan Feucht, David Atkinson, Byron Wallace, <strong>David Bau</strong>.
+  <a href="https://footprints.baulab.info/"
+    >Token Erasure as a Footprint of Implicit Vocabulary Items in LLMs.</a>
+  <em>Findings of the Association for Computational Linguistics: EMNLP 2024.</em>
+  <nobr>(EMNLP 2024)</nobr>
+</div>
+
+<div class="main pub">
   Arnab Sen Sharma, David Atkinson, <strong>David Bau</strong>.
   <a href="https://romba.baulab.info/"
     >Locating and Editing Factual Associations in Mamba.</a>
@@ -514,11 +522,6 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
   <a href="https://arxiv.org/abs/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals</a>.
   arxiv.org/abs/2407.14561 (2024)</div>
 
-<div class="main pub">Sheridan Feucht, David Atkinson, Byron Wallace, <strong>David Bau</strong>.
-<a href="https://footprints.baulab.info/"
-   >Token Erasure as a Footprint of Implicit Vocabulary Items in LLMs</a>.
-  arxiv.org/abs/2406.20086 (2024)</div>
-
 <div class="main pub">Samuel Marks, Can Rager, Eric J Michaud, Yonatan Belinkov, <strong>David Bau</strong>, Aaron Mueller.
   <a href="https://features.baulab.info/">Sparse feature circuits: Discovering and editing interpretable causal graphs in language models</a>.
   arxiv.org/abs/2403.19647 (2024)</div>
@@ -586,6 +589,9 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Interpretability and Responsibility in AI.</em> <a href="https://asu-apg.github.io/rbgm/">ECCV Workshop on Responsibly Building Generative Models</a>.  Milan, Italy. September 2024.</div>
+<div class="main pub"><em>Knowledge as Association.</em> <a href="https://sites.google.com/ttic.edu/knowledge-in-generative-models/home">ECCV Workshop on Knowledge in Generative Models</a>. Milan, Italy. September 2024.</div>
+<div class="main pub"><em>Three Perspectives on Unlearning.</em> <a href="https://sites.google.com/view/u-and-me-workshop/schedule?authuser=0">Workshop on Unlearning and Model Editing at ECCV.  Milan, Italy.  September 2024.</div>
 <div class="main pub"><em>Closing Keynote: A Third Copernican Revolution.</em> <a href="https://nemiconf.github.io/summer24/">New England Mechanistic Interpretability Workshop (NEMI 2024)</a>. Boston, MA. August 2024.</div>
 <div class="main pub"><em>The Fundamental Duality of Interpretability in ML.</em> <a href="https://icml2024mi.pages.dev/">Mechanistic Interpretability Workshop at ICML 2024</a>. Vienna, Austria. July 2024.</div>
 <div class="main pub"><em><a href="https://www.youtube.com/watch?v=AIfmSx250kM">Resilience and Interpretability</a>.</em> <a href="https://www.alignment-workshop.com/vienna-2024">FAR.AI Alignment Workshop</a>. Vienna, Austria. July 2024.</div>
