--- a/public/publications.html
+++ b/public/publications.html
@@ -162,6 +162,14 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
+  Sheridan Feucht, David Atkinson, Byron Wallace, <strong>David Bau</strong>.
+  <a href="https://footprints.baulab.info/"
+    >Token Erasure as a Footprint of Implicit Vocabulary Items in LLMs.</a>
+  <em>Findings of the Association for Computational Linguistics: EMNLP 2024.</em>
+  <nobr>(EMNLP 2024)</nobr>
+</div>
+
+<div class="main pub">
   Arnab Sen Sharma, David Atkinson, <strong>David Bau</strong>.
   <a href="https://romba.baulab.info/"
     >Locating and Editing Factual Associations in Mamba.</a>
