--- a/public/cv.html
+++ b/public/cv.html
@@ -591,7 +591,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <div class="main pub"><em>Interpretability and Responsibility in AI.</em> <a href="https://asu-apg.github.io/rbgm/">ECCV Workshop on Responsibly Building Generative Models</a>.  Milan, Italy. September 2024.</div>
 <div class="main pub"><em>Knowledge as Association.</em> <a href="https://sites.google.com/ttic.edu/knowledge-in-generative-models/home">ECCV Workshop on Knowledge in Generative Models</a>. Milan, Italy. September 2024.</div>
-<div class="main pub"><em>Three Perspectives on Unlearning.</em> <a href="https://sites.google.com/view/u-and-me-workshop/schedule?authuser=0">Workshop on Unlearning and Model Editing at ECCV.  Milan, Italy.  September 2024.</div>
+<div class="main pub"><em>Three Perspectives on Unlearning.</em> <a href="https://sites.google.com/view/u-and-me-workshop/schedule?authuser=0">Workshop on Unlearning and Model Editing at ECCV.</a>  Milan, Italy.  September 2024.</div>
 <div class="main pub"><em>Closing Keynote: A Third Copernican Revolution.</em> <a href="https://nemiconf.github.io/summer24/">New England Mechanistic Interpretability Workshop (NEMI 2024)</a>. Boston, MA. August 2024.</div>
 <div class="main pub"><em>The Fundamental Duality of Interpretability in ML.</em> <a href="https://icml2024mi.pages.dev/">Mechanistic Interpretability Workshop at ICML 2024</a>. Vienna, Austria. July 2024.</div>
 <div class="main pub"><em><a href="https://www.youtube.com/watch?v=AIfmSx250kM">Resilience and Interpretability</a>.</em> <a href="https://www.alignment-workshop.com/vienna-2024">FAR.AI Alignment Workshop</a>. Vienna, Austria. July 2024.</div>
