--- a/public/cv.html
+++ b/public/cv.html
@@ -589,6 +589,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Opening Keynote: Reslience and Human Understanding in AI.</em> <a href="https://visxai.io/">7th Workshop on Visualization for AI Explainability</a>.  St. Petes Beach, Florida. October 2024.</div>
 <div class="main pub"><em>Interpretability and Responsibility in AI.</em> <a href="https://asu-apg.github.io/rbgm/">ECCV Workshop on Responsibly Building Generative Models</a>.  Milan, Italy. September 2024.</div>
 <div class="main pub"><em>Knowledge as Association.</em> <a href="https://sites.google.com/ttic.edu/knowledge-in-generative-models/home">ECCV Workshop on Knowledge in Generative Models</a>. Milan, Italy. September 2024.</div>
 <div class="main pub"><em>Three Perspectives on Unlearning.</em> <a href="https://sites.google.com/view/u-and-me-workshop/schedule?authuser=0">Workshop on Unlearning and Model Editing at ECCV.</a>  Milan, Italy.  September 2024.</div>
