Add blackboxnlp paper.

--- a/public/cv.html
+++ b/public/cv.html
@@ -304,7 +304,7 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
   Sheridan Feucht, David Atkinson, Byron Wallace, <strong>David Bau</strong>.
   <a href="https://footprints.baulab.info/"
     >Token Erasure as a Footprint of Implicit Vocabulary Items in LLMs.</a>
-  <em>Findings of the Association for Computational Linguistics: EMNLP 2024.</em>
+  <em>Findings of the Association for Computational Linguistics.</em>
   <nobr>(EMNLP 2024)</nobr>
 </div>
 
@@ -477,6 +477,14 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 
 
 <h3 class="main">Workshop papers</h3>
+
+<div class="main pub">
+  Sheridan Feucht, Byron C Wallace, <strong>David Bau</strong>.
+  <a href="https://openreview.net/forum?id=6rnonj5BAZ"
+     >Inducing Induction in Llama via Linear Probe Interventions.</a>
+  <em>The 7th BlackboxNLP Workshop at EMNLP</em>
+  <nobr>(BlackboxNLP 2024)</nobr>.
+</div>
 
 <div class="main pub">
   Nicholas Vincent, <strong>David Bau</strong>, Sarah Schwettmann, Joshua Tan.
