--- a/public/students.html
+++ b/public/students.html
@@ -166,10 +166,9 @@ of interest:
 
 <ul>
   <li>AI alignment.  Looking for postdocs and students who are driven to measure and ensure the transparency, honesty, and understandability of huge models.
-  <li>Image synthesis and control.  Seeking Diffusion Model, GAN, and VAE investigators to slice up and better understand huge image synthesis models.
+  <li>AI knowledge extraction.  Seeking investigators interested in methods for deriving new human knowledge from an AI that achieves superhuman performance, especially from scientific AI such as protein models, or technical AI such as code LLMs.
   <li>Deep network programming tools.  What systems and tools will enable researchers and programmers to crack open, customize, understand, and control models with hundreds of billions of parameters?
 </ul>
-
 
 <p>PhD applicants should
  <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">apply to Northeastern Khoury</a>
@@ -181,6 +180,8 @@ interests.</p>
 
 <p>Prospective postdocs should reach out to me directly.
 </p>
+
+<p>Undergrad and MS students: the way to get involved is to team up with one of the PhD students or postdocs, who you can find on the homepage.
 
 <p>Am I the right advisor for you?
 My <a href="publications.html">previous publications</a>
