--- a/public/students.html
+++ b/public/students.html
@@ -172,9 +172,10 @@ of interest:
 
 <p>PhD applicants should
  <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">apply to Northeastern Khoury</a>
-and mention your interest in my lab.  I cannot reply to every
-inquiry, but you can <a href="mailto:davidbau@northeastern.edu">email me</a>
-with the words "Prospective Student" in the subject line, and attach a CV
+and mention your interest in my lab.  I cannot reply to inquiries, but if you
+want to highlight your application in an email, you can
+<a href="mailto:davidbau@northeastern.edu">email me</a> with the
+words "Prospective Student" in the subject line, and attach a CV
 <b>and</b> links to any papers that represent your research
 interests.</p>
 
