--- a/public/students.html
+++ b/public/students.html
@@ -182,7 +182,7 @@ interests.</p>
 <p>Prospective postdocs should reach out to me directly.
 </p>
 
-<p>Undergrad and MS students: the way to get involved is to team up with one of the PhD students or postdocs, who you can find on the homepage.
+<p>Undergrad and MS students: the way to get involved is to team up with one of the PhD students or postdocs in the lab, who you can find on the homepage.
 
 <p>Am I the right advisor for you?
 My <a href="publications.html">previous publications</a>
