--- a/public/cv.html
+++ b/public/cv.html
@@ -362,7 +362,7 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 </div>
 
 <div class="main pub">
-  Rohit Gandikota, Joanna Materzy&nacute;ska, Tingrui Zhou, Antonio Torralba, <strong>David Bau</strong>. <a href="https://sliders.baulab.info/">Concept Sliders: Lra adaptors for precise control in diffusion models.</a> <em>Proceedings of the European Conference on Computer Vision</em> <nobr>(ECCV 2024)</nobr>
+  Rohit Gandikota, Joanna Materzy&nacute;ska, Tingrui Zhou, Antonio Torralba, <strong>David Bau</strong>. <a href="https://sliders.baulab.info/">Concept Sliders: LORA adaptors for precise control in diffusion models.</a> <em>Proceedings of the European Conference on Computer Vision</em> <nobr>(ECCV 2024)</nobr>
 </div>
 
 <div class="main pub">
