--- a/public/cv.html
+++ b/public/cv.html
@@ -366,6 +366,10 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 </div>
 
 <div class="main pub">
+  Maxwell Jones, Sheng-Yu Wang, Nupur Kumari, <strong>David Bau</strong>, Jun-Yan Zhu. <a href="https://paircustomization.github.io/">Customizing Text-to-Image Models with a Single Image Pair.</a>. <em>SIGGRAPH Asia 2024 Conference Papers</em> <nobr>(SIGGRAPH Asia 2024)</nobr>
+</div>
+
+<div class="main pub">
   Rohit Gandikota, Hadas Orgad, Yonatan Belinkov, Joanna Materzy&nacute;ska, <strong>David Bau</strong>. <a href="https://unified.baulab.info/">Unified Concept Editing in Diffusion Models.</a> <em>Proceedings of the 2024 IEEE/CVF Winter Conference on Applications of Computer Vision.</em> <nobr>(WACV 2024)</nobr>
 </div>
 
