--- a/public/cv.html
+++ b/public/cv.html
@@ -657,6 +657,32 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Students Supervised</h2>
 
+<h3 class="main">Ph.D. Advisees</h3>
+
+<div class="main pub">Eric Todd</div>
+<div class="main pub">Nikhil Prakash</div>
+<div class="main pub">Arnab Sen Sharma</div>
+<div class="main pub">Koyena Pal</div>
+<div class="main pub">David Atkinson</div>
+<div class="main pub">Sheridan Feucht</div>
+<div class="main pub">Rohit Gandikota</div>
+<div class="main pub">Alex Loftus</div>
+
+<h3 class="main">Ph.D. Committees</h3>
+
+<div class="main pub">Jay De Young (advised by Byron Wallace)</div>
+<div class="main pub">Anurag Sarkar (advised by </div>
+Seth Cooper) </div>
+<div class="main pub">Sheng-Yu Wang (advised by Jun-Yan Zhu, Carnegie Mellon University)</div>
+<div class="main pub">Jack Merullo (advised by Ellie Pavlik, Brown University)</div>
+<div class="main pub">Fazl Barez (advised by Ioannis Konstas, Heriot-Watt University)</div>
+<div class="main pub">Yida Chen (advised by Martin Wattenberg, Harvard University)</div>
+
+<h3 class="main">Postdoctoral Fellows advised</h3>
+
+<div class="main pub">Aaron Mueller (now Professor at Boston University)</div>
+<div class="main pub">Sam Marks (now Research Scientist at Anthropic)</div>
+
 <h3 class="main">Masters Theses</h3>
 
 <div class="main pub">Christine You. <em>Contrasting Contrastive and Supervised Model Representations.</em></div>
