--- a/public/cv.html
+++ b/public/cv.html
@@ -692,8 +692,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 <h3 class="main">Ph.D. Committees</h3>
 
 <div class="main pub">Jay De Young (advised by Byron Wallace)</div>
-<div class="main pub">Anurag Sarkar (advised by </div>
-Seth Cooper) </div>
+<div class="main pub">Anurag Sarkar (advised by Seth Cooper) </div>
 <div class="main pub">Sheng-Yu Wang (advised by Jun-Yan Zhu, Carnegie Mellon University)</div>
 <div class="main pub">Jack Merullo (advised by Ellie Pavlik, Brown University)</div>
 <div class="main pub">Fazl Barez (advised by Ioannis Konstas, Heriot-Watt University)</div>
