--- a/public/cv.html
+++ b/public/cv.html
@@ -678,7 +678,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Students Supervised</h2>
 
-<h3 class="main">Ph.D. Advisees</h3>
+<h3 class="main">Ph.D. Students Advised</h3>
 
 <div class="main pub">Eric Todd</div>
 <div class="main pub">Nikhil Prakash</div>
