--- a/public/index.html
+++ b/public/index.html
@@ -502,8 +502,8 @@ Prof. Arvind Satyanarayan
    <span class="extra">
      At the most fundamental level, the tech companies building these AI
      systems don't fully understand how their models work internally&mdash;a
-     challenge inherent to the technology itself. But there’s a second,
-     distinct barrier to transparency: Developers aren’t making the data
+     challenge inherent to the technology itself. But there's a second,
+     distinct barrier to transparency: Developers aren't making the data
      they train these systems with available to those outside their
      organizations...
      Grasping the fundamental internals of AI models is important
